--- a/index.css
+++ b/index.css
@@ -6,6 +6,8 @@
     justify-content: center;
     flex-direction: column;
     height: 100vh;
+    animation-name: intro-animation;
+    animation-duration: 2s;
 }
 
 .myProjects {margin-left: 50%; border-left: 5px solid #007bff;}
@@ -15,6 +17,11 @@
 .contact i {font-size: 1.8rem;}
 
 video {background-color: #000000;}
+
+@keyframes intro-animation {
+    0% {transform: translateY(20px); opacity: 0;}
+    100% {transform: translateY(0); opacity: 1;}
+}
 
 @media screen and (max-width: 885px) {
     main {flex-direction: column;}
